# multiagent-ds

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/run_20250906_202825/: cleaning_plan.json  data_card.json  data_clean.parquet  spec.json
config/: config.yaml  knobs.yaml
src/: app.py  utils.py
src/cleaner/: cleaner.py
src/features/: pipeline.py
src/io/: io.py
src/profiler/: profiler.py
src/spec/: builder.py
src/utils/: common.py
